# cmake_cuda_Test

./: CMakeLists.txt  README.md  run.sh
Main/: benchmark.cpp  busy_copy.cu  example1.cpp  example2.cu  reduction.cu  simple_copy.cu
cmake/: Cuda.cmake
include/libmatrix/: cuda_memory_manager.h  device_arithmetic.h  device_math.h  device_matrix.h  math_ext.h
src/: cuda_memory_manager.cpp  device_matrix.cu
src/common/: cputimer.c
